<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Weather Eye</string>
    <string name="action_settings">Settings</string>
    <string name="enter_ip">Enter the IP Address of the Server</string>
	<string name="empty"></string>
	<string name="max_temp">Max Temp</string>
	<string name="min_temp">Min Temp</string>
	<string name="unknown">Unknown</string>
	<string name="cur_temp">Temperature</string>
	<string name="cur_hum">Humidity</string>
</resources>